legal phone numbers fixed on small screens

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -150,6 +150,7 @@
   font-size: 16px;
   width: 100%;
   color: white !important;
+  text-decoration: none;
 }
 .gray-background {
   background-color: #eaeaea;
